tests/baselines/reference/genericTypeAssertions4.errors.txt
tests/cases/compiler/genericTypeAssertions4.ts(19,5): error TS2322: Type 'A' is not assignable to type 'T'.
tests/cases/compiler/genericTypeAssertions4.ts(20,5): error TS2322: Type 'B' is not assignable to type 'T'.
tests/cases/compiler/genericTypeAssertions4.ts(21,5): error TS2322: Type 'C' is not assignable to type 'T'.
tests/cases/compiler/genericTypeAssertions4.ts(23,9): error TS2352: Conversion of type 'B' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
tests/cases/compiler/genericTypeAssertions4.ts(24,9): error TS2352: Conversion of type 'C' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.


==== tests/cases/compiler/genericTypeAssertions4.ts (5 errors) ====
    class A {
        foo() { return ""; }
    }
    
    class B extends A {
        bar() { return 1; }
    }
    
    class C extends A {
        baz() { return 1; }
    }
    
    var a: A;
    var b: B;
    var c: C;
    
    function foo2<T extends A>(x: T) {
        var y = x;
        y = a; // error: cannot convert A to T
        ~
!!! error TS2322: Type 'A' is not assignable to type 'T'.
        y = b; // error: cannot convert B to T
        ~
!!! error TS2322: Type 'B' is not assignable to type 'T'.
        y = c; // error: cannot convert C to T
        ~
!!! error TS2322: Type 'C' is not assignable to type 'T'.
        y = <T>a;
        y = <T>b; // error: cannot convert B to T
            ~~~~
!!! error TS2352: Conversion of type 'B' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
        y = <T>c; // error: cannot convert C to T
            ~~~~
!!! error TS2352: Conversion of type 'C' to type 'T' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
    }